Lint config updated for vertical_whitespace

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -99,6 +99,9 @@ whitelist_rules:
   # TODOs and FIXMEs should be avoided.
   # - todo
 
+  # Limit vertical whitespace to a three empty lines (rule configuration is below)
+  - vertical_whitespace
+
   # Files should have a single trailing newline.
   - trailing_newline
 
@@ -129,8 +132,12 @@ whitelist_rules:
 
 # Rules configuration
 
-control_statement: 
-  severity: error 
+vertical_whitespace:
+  max_empty_lines: 3
+  severity: error
+
+control_statement:
+  severity: error
 
 custom_rules:
 
