--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -69,7 +69,7 @@ whitelist_rules:
   # - legacy_constructor
 
   # Lines should not span too many characters.
-  # - line_length
+  line_length: 160
 
   # MARK comment should be in valid format.
   - mark
