Update example site in json payload

--- a/Networking/NetworkingTests/Responses/me-settings.json
+++ b/Networking/NetworkingTests/Responses/me-settings.json
@@ -12,7 +12,7 @@
 	"user_email": "moocow@example.com",
 	"user_email_change_pending": false,
 	"new_user_email": "",
-	"user_URL": "http://www.xcode.wtf",
+	"user_URL": "http://www.xcode.moo",
 	"language": "en",
 	"avatar_URL": "https://2.gravatar.com/avatar/x?s=200&amp;d=mm",
 	"primary_site_ID": 57773116,
