--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,15 +2,56 @@ version: 2.1
 
 orbs:
   # This uses the Orbs located at https://github.com/wordpress-mobile/circleci-orbs
-  ios: wordpress-mobile/ios@0.0.25
+  ios: wordpress-mobile/ios@0.0.32
+  git: wordpress-mobile/git@0.0.32
+
+commands:
+  load-chruby:
+    steps:
+      - run:
+          name: Load chruby
+          command: |
+            # Force chruby to load to work around CircleCI Xcode 11 image issue
+            echo 'source /usr/local/opt/chruby/share/chruby/chruby.sh && chruby 2.5.5' >> $BASH_ENV
+
+jobs:
+  Build Tests:
+    executor:
+      name: ios/default
+      xcode-version: "11.0.0"
+    steps:
+      - git/shallow-checkout
+      - load-chruby
+      - ios/install-dependencies:
+            bundle-install: true
+            pod-install: true
+      - ios/xcodebuild:
+          command: build-for-testing
+          arguments: -workspace 'WooCommerce.xcworkspace' -scheme 'WooCommerce' -configuration 'Debug' -sdk iphonesimulator -derivedDataPath DerivedData
+      - persist_to_workspace:
+          root: ./
+          paths:
+            - DerivedData/Build/Products
+  
+  Unit Tests:
+    executor:
+      name: ios/default
+      xcode-version: "11.0.0"
+    steps:
+      - ios/boot-simulator:
+          xcode-version: "11.0.0"
+          device: iPhone 11
+      - attach_workspace:
+          at: ./
+      - ios/wait-for-simulator
+      - ios/xcodebuild:
+          command: test-without-building
+          arguments: -xctestrun DerivedData/Build/Products/WooCommerce_iphonesimulator13.0-x86_64.xctestrun -destination "platform=iOS Simulator,id=$SIMULATOR_UDID"
+      - ios/save-xcodebuild-artifacts
 
 workflows:
   woocommerce_ios:
     jobs:
-      - ios/test:
-          name: Test
-          xcode-version: "10.2.0"
-          workspace: WooCommerce.xcworkspace
-          scheme: WooCommerce
-          device: iPhone XS
-          ios-version: "12.2"
+      - Build Tests
+      - Unit Tests:
+          requires: [ "Build Tests" ]
