--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,8 @@ Preview.html
 # Ignore Local Configuration files (like the ones used for Fastlane)
 .env
 /fastlane/promo_screenshots
+
+# All secrets should be stored under .configure-files
+# Everything without a .enc extension is ignored
+.configure-files/*
+!.configure-files/*.enc
