--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,30 @@ jobs:
           command: test-without-building
           arguments: -xctestrun DerivedData/Build/Products/WooCommerce_iphonesimulator13.0-x86_64.xctestrun -destination "platform=iOS Simulator,id=$SIMULATOR_UDID"
       - ios/save-xcodebuild-artifacts
+  Installable Build:
+    executor:
+      name: ios/default
+      xcode-version: "11.0.0"
+    steps:
+      - git/shallow-checkout
+      - load-chruby
+      - ios/install-dependencies:
+            bundle-install: true
+            pod-install: true
+      - run:
+          name: Copy Secrets
+          command: bundle exec fastlane run configure_apply
+      - run:
+          name: Build
+          command: "bundle exec fastlane build_and_upload_installable_build build_number:$CIRCLE_BUILD_NUM"
+      - run:
+          name: Prepare Artifacts
+          command: |
+            mkdir -p Artifacts
+            mv "fastlane/comment.json" "Artifacts/comment.json"
+      - store_artifacts:
+          path: Artifacts
+          destination: Artifacts
 
 workflows:
   woocommerce_ios:
@@ -55,3 +79,15 @@ workflows:
       - Build Tests
       - Unit Tests:
           requires: [ "Build Tests" ]
+  Installable Build:
+    jobs:
+      - Hold:
+          type: approval
+          filters:
+            branches:
+              ignore: /pull\/[0-9]+/
+      - Installable Build:
+          requires: [Hold]  
+          filters:
+            branches:
+              ignore: /pull\/[0-9]+/
